--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-dark">Dark</button>
+
 
 </body>
 </html>
