Ajout de la NavBar + immage d'accueil et propiété css (avec le ficher style.css) pour bien mettre en forme le tout

--- a/index.html
+++ b/index.html
@@ -5,11 +5,45 @@
     <title>Title</title>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-dark">Dark</button>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-green">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
+                    <span class="text-white ml-2">Morlaix Communauté</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav text-center">
+                        <li class="nav-item active">
+                            <a class="nav-link text-white" href="#">La Communauté</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Domaines d'actions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Les grands projets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Les équipements</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                        <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-
+    <div class="custom-image-container">
+        <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+    </div>
 </body>
 </html>
