--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <title>Morlaix Communauté</title>
       <script type="text/javascript" src="js/bootstrap.js"></script>
       <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/style.css">
+
    </head>
    <body>
       <header>
@@ -44,9 +46,65 @@
             </div>
          </nav>
       </header>
+
       <div class="custom-image-container">
          <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
       </div>
+
+      <div class="container mt-4 space-after ">
+         <!-- ne pas oublier de mettre les lien sur les cards ici !!-->
+         <div class="row">
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
+                     <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/valise.png" class="logo-card" alt="Logo  Valise">
+                     <p class="font-weight-bold">EMPLOI</p>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/association.png" class="logo-card" alt="Logo Associations">
+                     <p class="font-weight-bold">ASSOCIATIONS</p>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
+                     <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
+                     <p class="font-weight-bold">TRAVAUX</p>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-2">
+               <div class="card-style">
+                  <a href="lien-prov.com" class="card-link" target="_blank">
+                     <img src="/image/icones/variante-de-ballon-de-basket.png" class="logo-card" alt="Logo Sport">
+                     <p class="font-weight-bold">SPORT</p>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>
+
       <div class="container">
          <div class="row">
             <div class="col-sm-3">
