Ajout du style sur le milieu de la page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
+                     <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
                      <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
                   </a>
                </div>
@@ -65,7 +65,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/valise.png" class="logo-card" alt="Logo  Valise">
+                     <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
                      <p class="font-weight-bold">EMPLOI</p>
                   </a>
                </div>
@@ -73,7 +73,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/association.png" class="logo-card" alt="Logo Associations">
+                     <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
                      <p class="font-weight-bold">ASSOCIATIONS</p>
                   </a>
                </div>
@@ -81,7 +81,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
+                     <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
                      <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
                   </a>
                </div>
@@ -89,7 +89,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
+                     <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
                      <p class="font-weight-bold">TRAVAUX</p>
                   </a>
                </div>
@@ -97,7 +97,7 @@
             <div class="col-md-2">
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
-                     <img src="/image/icones/variante-de-ballon-de-basket.png" class="logo-card" alt="Logo Sport">
+                     <img src="image/icones/variante-de-ballon-de-basket.png" class="logo-card" alt="Logo Sport">
                      <p class="font-weight-bold">SPORT</p>
                   </a>
                </div>
@@ -109,9 +109,7 @@
          <div class="row">
             <div class="col-sm-3">
                <div class="list-group">
-                  <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-                  Actualités
-                  </a>
+                  <a href="#" class="list-group-item list-group-item-action active" aria-current="true">Actualités</a>
                   <a href="#" class="list-group-item list-group-item-action">Habiter</a>
                   <a href="#" class="list-group-item list-group-item-action">Se déplacer</a>
                   <a href="#" class="list-group-item list-group-item-action">Entreprendre</a>
@@ -127,22 +125,22 @@
                <div id="carouselExample" class="carousel slide">
                   <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img src="image\actualites\animation.jpg" class="d-block w-100" alt="Affiche animation biodiversité">
+                        <img src="image\actualites\animations_nature_biodiversité.png" class="d-block w-100" alt="Affiche animation biodiversité">
                      </div>
                      <div class="carousel-item">
                         <img src="image\actualites\festival_panoramas.png" class="d-block w-100" alt="festival panorama">
                      </div>
                      <div class="carousel-item">
-                        <img src="image\actualites\journee_du_patrimoine.jpg" class="d-block w-100" alt="journée du patrimoine">
+                        <img src="image\actualites\journee_patrimoine.png" class="d-block w-100" alt="journée du patrimoine">
                      </div>
                      <div class="carousel-item">
-                        <img src="image\actualites\les_lignes_de_plage.png" class="d-block w-100" alt="les lignes de plage">
+                        <img src="image\actualites\les_lignes_de_la_plage.png" class="d-block w-100" alt="les lignes de plage">
                      </div>
                      <div class="carousel-item">
                         <img src="image\actualites\les_rues_en_scenes.png" class="d-block w-100" alt="les reus en scenes">
                      </div>
                      <div class="carousel-item">
-                        <img src="image\actualites\MX_art_tours_2023.jpg" class="d-block w-100" alt="art tours">
+                        <img src="image\actualites\MX_art_tour.png" class="d-block w-100" alt="art tours">
                      </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -155,20 +153,19 @@
                   </button>
                </div>
             </div>
-            <div class="col-sm-3 bg-light">
+            <div class="col-sm-3" id="agenda">
                <div class="row">
-                  <span class="glyphicon calendar"></span>
                   <h2>Agenda</h2>
                </div>
-               <div class="row">
+               <div class="row info">
                   <h5>24/09/2023</h5>
                   <p class="border-left-5  border-danger">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
                </div>
-               <div class="row">
+               <div class="row info">
                   <h5>24/09/2023</h5>
                   <p class="border-left  border-danger" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
                </div>
-               <div class="row">
+               <div class="row info">
                   <h5>24/09/2023</h5>
                   <p class="border-left  border-danger">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
                </div>
