--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
                <span class="text-white ml-2">Morlaix Communauté</span>
                </a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
                </button>
-               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+               <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav text-center">
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">La Communauté</a>
                      </li>
                      <li class="nav-item">
