--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
                      <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
-                     <p class="font-weight-bold">ASSOCIATIONS</p>
+                     <p class="font-weight-bold">SERVICE EN LIGNE</p>
                   </a>
                </div>
             </div>
@@ -100,7 +100,7 @@
                <div class="card-style">
                   <a href="lien-prov.com" class="card-link" target="_blank">
                      <img src="image/icones/variante-de-ballon-de-basket.png" class="logo-card" alt="Logo Sport">
-                     <p class="font-weight-bold">SPORT</p>
+                     <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                   </a>
                </div>
             </div>
