--- a/index.html
+++ b/index.html
@@ -201,14 +201,11 @@
          </a></li>
       </ul>
       <ul class="menu">
-         <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
-         <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-         <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
-         <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
-         <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
-
+         <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
+         <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire de contact</a></li>
+         <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
       </ul>
-      <p>&copy;2021 Nadine Coelho | All Rights Reserved</p>
+      <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
    </footer>
    </div>
 
