Amélioration des pages

--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Site de la communauté de Morlaix">
-    <meta name="author" content="Damien Eloïse Lucas Samy">
-    <!-- Pour adapter sur téléphone -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morlaix Communauté</title>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Ltouristique.css">
-</head>
+    <head>
 
-<body>
+        <meta charset="UTF-8">
+        <meta name="description" content="Site de la communauté de Morlaix">
+        <meta name="author" content="Damien Eloïse Lucas Samy">
+        <!-- Pour adapter sur téléphone -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lieux Touristiques</title>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/Ltouristique.css">
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-green">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
-                <span class="text-white ml-2">Morlaix Communauté</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav text-center">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">La Communautée</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Domaines d'actions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les grands projets</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les équipements</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                    <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
-                </form>
+    </head>
+
+    <body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-green">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
+                    <span class="text-white ml-2">Morlaix Communauté</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav text-center">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">La Communautée</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Domaines d'actions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Les grands projets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Les équipements</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                        <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
+                    </form>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
 <div class="custom-image-container">
     <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
