--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -1,10 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="fr">
 
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Site de la communauté de Morlaix">
+        <meta name="author" content="Damien Eloïse Lucas Samy">
+        <!-- Pour adapter sur téléphone -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Service en ligne</title>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+
+    <body>
+
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-green">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
+                        <span class="text-white ml-2">Morlaix Communauté</span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav text-center">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">La Communautée</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Domaines d'actions</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Les grands projets</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Les équipements</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                            <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <div class="custom-image-container">
+            <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+        </div>
+
+        <div class="container mt-4 space-after ">
+            <!-- ne pas oublier de mettre les lien sur les cards ici !!-->
+            <div class="row">
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
+                            <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
+                            <p class="font-weight-bold">EMPLOI</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
+                            <p class="font-weight-bold">SERVICE EN LIGNE</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
+                            <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
+                            <p class="font-weight-bold">TRAVAUX</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-style">
+                        <a href="lien-prov.com" class="card-link" target="_blank">
+                            <img src="image/icones/variante-de-ballon-de-basket.png" class="logo-card" alt="Logo Sport">
+                            <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
+
+    <div class="Toutfooter">
+        <footer class="footer">
+            <div class="waves">
+                <div class="wave" id="wave1"></div>
+                <div class="wave" id="wave2"></div>
+                <div class="wave" id="wave3"></div>
+                <div class="wave" id="wave4"></div>
+            </div>
+            <ul class="social-icon">
+                <li class="social-icon__item"><a class="social-icon__link" href="https://consent.youtube.com/m?continue=https%3A%2F%2Fwww.youtube.com%2Fuser%2FmorlaixFR%2Ffeed%3Fcbrd%3D1&gl=FR&m=0&pc=yt&cm=2&hl=fr&src=1" target= "blank">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                </a></li>
+                <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/Morlaix_Attract" target= "blank">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                </a></li>
+                <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/company/morlaix-attractivite/" target= "blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                </a></li>
+                <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/MorlaixCommunauteOfficiel/" target= "blank">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a></li>
+            </ul>
+            <ul class="menu">
+                <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
+                <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire de contact</a></li>
+                <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
+            </ul>
+            <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
+        </footer>
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </html>
