--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="author" content="Damien Eloïse Lucas Samy">
       <!-- Pour adapter sur téléphone -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Morlaix Communauté</title>
+      <title>Accueil</title>
       <script type="text/javascript" src="js/bootstrap.js"></script>
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
@@ -179,36 +179,35 @@
 
 <!--Damien : Footer-->
    <div class="Toutfooter">
-   <footer class="footer">
-      <div class="waves">
-         <div class="wave" id="wave1"></div>
-         <div class="wave" id="wave2"></div>
-         <div class="wave" id="wave3"></div>
-         <div class="wave" id="wave4"></div>
-      </div>
-      <ul class="social-icon">
-         <li class="social-icon__item"><a class="social-icon__link" href="https://consent.youtube.com/m?continue=https%3A%2F%2Fwww.youtube.com%2Fuser%2FmorlaixFR%2Ffeed%3Fcbrd%3D1&gl=FR&m=0&pc=yt&cm=2&hl=fr&src=1" target= "blank">
-            <ion-icon name="logo-youtube"></ion-icon>
-         </a></li>
-         <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/Morlaix_Attract" target= "blank">
-            <ion-icon name="logo-twitter"></ion-icon>
-         </a></li>
-         <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/company/morlaix-attractivite/" target= "blank">
-            <ion-icon name="logo-linkedin"></ion-icon>
-         </a></li>
-         <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/MorlaixCommunauteOfficiel/" target= "blank">
-            <ion-icon name="logo-facebook"></ion-icon>
-         </a></li>
-      </ul>
-      <ul class="menu">
-         <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
-         <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire de contact</a></li>
-         <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
-      </ul>
-      <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
-   </footer>
+      <footer class="footer">
+         <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
+         </div>
+         <ul class="social-icon">
+            <li class="social-icon__item"><a class="social-icon__link" href="https://consent.youtube.com/m?continue=https%3A%2F%2Fwww.youtube.com%2Fuser%2FmorlaixFR%2Ffeed%3Fcbrd%3D1&gl=FR&m=0&pc=yt&cm=2&hl=fr&src=1" target= "blank">
+               <ion-icon name="logo-youtube"></ion-icon>
+            </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/Morlaix_Attract" target= "blank">
+               <ion-icon name="logo-twitter"></ion-icon>
+            </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/company/morlaix-attractivite/" target= "blank">
+               <ion-icon name="logo-linkedin"></ion-icon>
+            </a></li>
+            <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/MorlaixCommunauteOfficiel/" target= "blank">
+               <ion-icon name="logo-facebook"></ion-icon>
+            </a></li>
+         </ul>
+         <ul class="menu">
+            <li class="menu__item"><a class="menu__link" href="#">Données personnelles</a></li>
+            <li class="menu__item"><a class="menu__link" href="https://www.demarches-simplifiees.fr/commencer/4b2693bc-0e68-4050-81f7-7c6cfb080038">Formulaire de contact</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Mentions légales</a></li>
+         </ul>
+         <p>&copy;2023 Damien | Eloïse | Samy | Lucas | </p>
+      </footer>
    </div>
-
    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
