Changement logo en haut de page web

--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Damien Eloïse Lucas Samy">
         <!-- Pour adapter sur téléphone -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Service en ligne</title>
+        <title>Service en ligne</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
