--- a/commune.html
+++ b/commune.html
@@ -8,8 +8,7 @@
         <!-- Pour adapter sur téléphone -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="image/logo_morlaix-coupe.png">
-        <title>Morlaix Communauté</title>
-
+        <title>Morlaix Communauté</title><link rel="Icon" href="image/logo_morlaix-coupe.png"/>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
