--- a/commune.html
+++ b/commune.html
@@ -26,21 +26,19 @@
     <body>
 
         <header>
-
             <nav class="navbar navbar-expand-lg navbar-light bg-green">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
                         <span class="text-white ml-2">Morlaix Communauté</span>
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav text-center">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">La Communauté</a>
+                                <a class="nav-link text-white" href="#">La Communautée</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#">Domaines d'actions</a>
@@ -59,7 +57,6 @@
                     </div>
                 </div>
             </nav>
-
         </header>
 
         <div class="custom-image-container">
@@ -71,15 +68,15 @@
             <div class="row">
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="#" class="card-link">
                             <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
-                            <p class="font-weight-bold">COMMANDE PUBLIQUE</p>
+                            <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="#" class="card-link">
                             <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
                             <p class="font-weight-bold">EMPLOI</p>
                         </a>
@@ -87,15 +84,15 @@
                 </div>
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="Service en ligne.html" class="card-link" target="_blank">
                             <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
-                            <p class="font-weight-bold">ASSOCIATIONS</p>
+                            <p class="font-weight-bold">SERVICE EN LIGNE</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="#" class="card-link">
                             <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
                             <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
                         </a>
@@ -103,7 +100,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="#" class="card-link">
                             <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
                             <p class="font-weight-bold">TRAVAUX</p>
                         </a>
@@ -111,7 +108,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="card-style">
-                        <a href="lien-prov.com" class="card-link" target="_blank">
+                        <a href="Ltouristique.html" class="card-link" target="_blank">
                             <img src="image/icones/Logo_lieux_Touristiques.png" class="logo-card" alt="Logo Sport">
                             <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                         </a>
