--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
          <nav class="navbar navbar-expand-lg navbar-light bg-green">
             <div class="container">
-               <a class="navbar-brand" href="#">
+               <a class="navbar-brand" href="index.html">
                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la caumunauté">
                <span class="text-white ml-2">Morlaix Communauté</span>
                </a>
@@ -58,7 +58,7 @@
          <div class="row">
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="#" class="card-link">
                      <img src="image/icones/public-library.png" class="logo-card" alt="Logo Batiment Publique">
                      <p class="font-weight-bold" >COMMANDE PUBLIQUE</p>
                   </a>
@@ -66,7 +66,7 @@
             </div>
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="#" class="card-link">
                      <img src="image/icones/valise.png" class="logo-card" alt="Logo  Valise">
                      <p class="font-weight-bold">EMPLOI</p>
                   </a>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="Service en ligne.html" class="card-link" target="_blank">
                      <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
                      <p class="font-weight-bold">SERVICE EN LIGNE</p>
                   </a>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="#" class="card-link">
                      <img src="image/icones/autobus.png" class="logo-card" alt="Logo Mobilité">
                      <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
                   </a>
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="#" class="card-link">
                      <img src="image/icones/cloture.png" class="logo-card" alt="Logo Travaux">
                      <p class="font-weight-bold">TRAVAUX</p>
                   </a>
@@ -98,7 +98,7 @@
             </div>
             <div class="col-md-2">
                <div class="card-style">
-                  <a href="lien-prov.com" class="card-link" target="_blank">
+                  <a href="Ltouristique.html" class="card-link" target="_blank">
                      <img src="image/icones/Logo_lieux_Touristiques.png" class="logo-card" alt="Logo Sport">
                      <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                   </a>
