--- a/commune.html
+++ b/commune.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/stylec.css">
         <link rel="stylesheet" href="css/Contcart.css"/>
         <link
                 rel="stylesheet"
