Amélioration page service en ligne

--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -156,11 +156,11 @@
                 <i class="fas fa-times"></i>
                 <h3>Réduction des déchets et demandes de subvention</h3>
                 <p>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/7705bdde-811e-4cbb-ac77-61c1e3c0feb0" target="_blank">• Inscription au défi des familles</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/d7bb8a86-a0e8-4fe0-9085-735323725eac" target="_blank">• Subvention pour la prévention des déchets - Composteurs</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/be12e609-3b8b-4797-93f8-88f7cc885896" target="_blank">• Subvention pour la prévention des déchets - Couches lavables</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/659dc8c7-0c9f-4e01-876f-98d52162387d" target="_blank">• Subvention pour la prévention des déchets - Location broyeur</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/75e2fe02-d5cb-4dd3-af8e-9e397f2bd291" target="_blank">• Subvention pour la prévention des déchets - Tondeuse mulching</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/7705bdde-811e-4cbb-ac77-61c1e3c0feb0" class="card-link" target="_blank">• Inscription au défi des familles</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/d7bb8a86-a0e8-4fe0-9085-735323725eac" class="card-link" target="_blank">• Subvention pour la prévention des déchets - Composteurs</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/be12e609-3b8b-4797-93f8-88f7cc885896" class="card-link" target="_blank">• Subvention pour la prévention des déchets - Couches lavables</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/659dc8c7-0c9f-4e01-876f-98d52162387d" class="card-link" target="_blank">• Subvention pour la prévention des déchets - Location broyeur</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/75e2fe02-d5cb-4dd3-af8e-9e397f2bd291" class="card-link" target="_blank">• Subvention pour la prévention des déchets - Tondeuse mulching</a><br>
                 </p>
             </div>
 
@@ -168,17 +168,17 @@
                 <i class="fas fa-times"></i>
                 <h3>Culture et Patrimoine</h3>
                 <p>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/1d189235-5b17-4965-be4c-88ab55bf4ba5" target="_blank">• Demande d'information - Culture, Patrimoine</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-culture-patrimoin" target="_blank">• Subvention pour les associations Culture, Patrimoine</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/parcours-culturel-de-l-eleve-demande-de-mise-en-pa" target="_blank">• Parcours culturel de l'élève - Demande de mise en paiement</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/journees-europeennes-du-patrimoine-recensement-des" target="_blank">• Journées Européennes du Patrimoine - Recensement des animations</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-pour-les-asso" target="_blank">• Compte rendu financier de subvention pour les associations Culture, Patrimoine</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-culture" target="_blank">• Compte rendu pour les structures publiques Culture, Patrimoine </a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-culture-e" target="_blank">• Subvention pour les structures publiques Culture, Patrimoine </a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-petit-patrimoine-non-classe-bati" target="_blank">• Compte rendu « Petit patrimoine non-classé bâti »</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-de-subvention-petit-patrimoine-non-classe-" target="_blank">• Demande de subvention « Petit patrimoine non-classé bâti »</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-de-subvention-soutien-aux-tiers-lieux-d-ac" target="_blank">• Demande de subvention "Soutien aux tiers-lieux d'activités artistiques et culturelles"</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-soutien-aux-tiers-lieux-d-activites-a" target="_blank">• Compte rendu "Soutien aux tiers-lieux d'activités artistiques et culturelles"</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/1d189235-5b17-4965-be4c-88ab55bf4ba5" class="card-link" target="_blank">• Demande d'information - Culture, Patrimoine</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-culture-patrimoin" class="card-link" target="_blank">• Subvention pour les associations Culture, Patrimoine</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/parcours-culturel-de-l-eleve-demande-de-mise-en-pa" class="card-link" target="_blank">• Parcours culturel de l'élève - Demande de mise en paiement</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/journees-europeennes-du-patrimoine-recensement-des" class="card-link" target="_blank">• Journées Européennes du Patrimoine - Recensement des animations</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-pour-les-asso" class="card-link" target="_blank">• Compte rendu financier de subvention pour les associations Culture, Patrimoine</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-culture" class="card-link" target="_blank">• Compte rendu pour les structures publiques Culture, Patrimoine </a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-culture-e" class="card-link" target="_blank">• Subvention pour les structures publiques Culture, Patrimoine </a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-petit-patrimoine-non-classe-bati" class="card-link" target="_blank">• Compte rendu « Petit patrimoine non-classé bâti »</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-de-subvention-petit-patrimoine-non-classe-" class="card-link" target="_blank">• Demande de subvention « Petit patrimoine non-classé bâti »</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-de-subvention-soutien-aux-tiers-lieux-d-ac" class="card-link" target="_blank">• Demande de subvention "Soutien aux tiers-lieux d'activités artistiques et culturelles"</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-soutien-aux-tiers-lieux-d-activites-a" class="card-link" target="_blank">• Compte rendu "Soutien aux tiers-lieux d'activités artistiques et culturelles"</a><br>
                 </p>
             </div>
 
@@ -186,11 +186,11 @@
                 <i class="fas fa-times"></i>
                 <h3>Manifestations sportives</h3>
                 <p>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-d-information-manifestations-sportives" target="_blank">• Demande d'information - Manifestations sportives</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-de-manifestations" target="_blank">• Demande de subventions pour les Manifestations sportives</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-pour-les-asso" target="_blank">• Compte-rendu financier de subvention pour les manifestations sportives</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-de-manife" target="_blank">• Subventions pour les structures publiques organisant des manifestations sportives</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-de-mani" target="_blank">• Compte-rendu pour les structures publiques organisant des manifestations sportives</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-d-information-manifestations-sportives" class="card-link" target="_blank">• Demande d'information - Manifestations sportives</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-de-manifestations" class="card-link" target="_blank">• Demande de subventions pour les Manifestations sportives</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-pour-les-asso" class="card-link" target="_blank">• Compte-rendu financier de subvention pour les manifestations sportives</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-de-manife" class="card-link" target="_blank">• Subventions pour les structures publiques organisant des manifestations sportives</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-de-mani" class="card-link" target="_blank">• Compte-rendu pour les structures publiques organisant des manifestations sportives</a><br>
                 </p>
             </div>
 
@@ -198,11 +198,11 @@
                 <i class="fas fa-times"></i>
                 <h3>Cohésion sociale, Jeunesse <br> et Contrat de veille</h3>
                 <p>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-d-information-cohesion-sociale-jeunesse" target="_blank">• Demande d'information - Cohésion sociale et Jeunesse</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-cohesion-sociale-" target="_blank">• Subventions pour les associations Cohésion sociale, Jeunesse, Contrat de veille</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-cohesion" target="_blank">• Compte-rendu financier de subvention pour les associations Cohésion sociale, Jeunesse, Contrat de veille</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-cohesion-" target="_blank">• Subventions pour les structures publiques Cohésion sociale, Jeunesse, Contrat de veille</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-cohesio" target="_blank">• Compte-rendu pour les structures publiques Cohésion sociale, Jeunesse, Contrat de veille</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/demande-d-information-cohesion-sociale-jeunesse" class="card-link" target="_blank">• Demande d'information - Cohésion sociale et Jeunesse</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-associations-cohesion-sociale-" class="card-link" target="_blank">• Subventions pour les associations Cohésion sociale, Jeunesse, Contrat de veille</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-financier-de-subvention-cohesion" class="card-link" target="_blank">• Compte-rendu financier de subvention pour les associations Cohésion sociale, Jeunesse, Contrat de veille</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/subvention-pour-les-structures-publiques-cohesion-" class="card-link" target="_blank">• Subventions pour les structures publiques Cohésion sociale, Jeunesse, Contrat de veille</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/compte-rendu-pour-les-structures-publiques-cohesio" class="card-link" target="_blank">• Compte-rendu pour les structures publiques Cohésion sociale, Jeunesse, Contrat de veille</a><br>
                 </p>
             </div>
 
@@ -210,9 +210,9 @@
                 <i class="fas fa-times"></i>
                 <h3>Paiement en ligne</h3>
                 <p>
-                    <a href="https://morlaixcommunaute.taxesejour.fr/" target="_blank">• Paiement en ligne - Taxe de séjour</a><br>
-                    <a href="https://www.payfip.gouv.fr/tpi-zu/accueilportail.web" target="_blank">• Paiement en ligne - Corps-morts</a><br>
-                    <a href="https://idp.chorus-pro.gouv.fr/auth/realms/chorus-pro/protocol/openid-connect/auth?scope=profile%20email%20openid&response_type=code&oauth_provider_id=d24601a41b2b1510a15587b5604bcb29&state=SNCcb8ade145e726a9b2b34313043487c8f&redirect_uri=https://portail.chorus-pro.gouv.fr/navpage.do&client_id=d50afa7e1191e81da1c0a38cb81ae130061c4164" target="_blank">• Dématérialisation des factures à l'aide de Chorus Pro</a><br>
+                    <a href="https://morlaixcommunaute.taxesejour.fr/" class="card-link" target="_blank">• Paiement en ligne - Taxe de séjour</a><br>
+                    <a href="https://www.payfip.gouv.fr/tpi-zu/accueilportail.web" class="card-link" target="_blank">• Paiement en ligne - Corps-morts</a><br>
+                    <a href="https://idp.chorus-pro.gouv.fr/auth/realms/chorus-pro/protocol/openid-connect/auth?scope=profile%20email%20openid&response_type=code&oauth_provider_id=d24601a41b2b1510a15587b5604bcb29&state=SNCcb8ade145e726a9b2b34313043487c8f&redirect_uri=https://portail.chorus-pro.gouv.fr/navpage.do&client_id=d50afa7e1191e81da1c0a38cb81ae130061c4164" class="card-link" target="_blank">• Dématérialisation des factures à l'aide de Chorus Pro</a><br>
                 </p>
             </div>
 
@@ -220,10 +220,10 @@
                 <i class="fas fa-times"></i>
                 <h3>Ressources humaines</h3>
                 <p>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/acdf1b86-7411-44d5-877a-7d6920a91b9e" target="_blank">• Candidature de recrutement en cours</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/2b0ae01a-79a8-4105-b7d1-6fb1de77d4de" target="_blank">• Candidature spontanée</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/d2370eca-eebf-422e-89a1-151e950198ee" target="_blank">• Demande de stage</a><br>
-                    <a href="https://www.demarches-simplifiees.fr/commencer/e5434d62-5de7-433f-88b4-97e0fec3b99a" target="_blank">• Emploi saisonnier</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/acdf1b86-7411-44d5-877a-7d6920a91b9e" class="card-link" target="_blank">• Candidature de recrutement en cours</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/2b0ae01a-79a8-4105-b7d1-6fb1de77d4de" class="card-link" target="_blank">• Candidature spontanée</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/d2370eca-eebf-422e-89a1-151e950198ee" class="card-link" target="_blank">• Demande de stage</a><br>
+                    <a href="https://www.demarches-simplifiees.fr/commencer/e5434d62-5de7-433f-88b4-97e0fec3b99a" class="card-link" target="_blank">• Emploi saisonnier</a><br>
                 </p>
             </div>
 
