--- a/Service en ligne.html
+++ b/Service en ligne.html
@@ -79,7 +79,7 @@
                 <div class="card-style">
                     <a href="Service en ligne.html" class="card-link" target="_blank">
                         <img src="image/icones/association.png" class="logo-card" alt="Logo Associations">
-                        <p class="font-weight-bold">SERVICE EN LIGNE</p>
+                        <p class="font-weight-bold">SERVICES EN LIGNE</p>
                     </a>
                 </div>
             </div>
