--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -51,6 +51,14 @@
 
         <div class="custom-image-container">
             <img src="image/fond-page-accueil.jpg" class="custom-image" alt="Image d'accueil">
+            <h1> <span class="ityped"></span></h1>
+            <script type="text/javascript" src="js/app.js"></script>
+            <script type="text/javascript">
+                window.ityped.init(document.querySelector('.ityped'),{
+                    strings :['Bienvenidos','Les Saluda'],
+                    loop : true
+                })
+            </script>
         </div>
 
         <div class="container mt-4 space-after ">
@@ -207,7 +215,7 @@
 
 
             </div>
-            <p class="ecriture">Plages et îles secrets</p>
+            <p class="ecriture">Trésors Marins</p>
             <div class="cardtst">
                 <a href="#" class="cardt">
                     <div class="cardt-background"
